--- a/projt/index.html
+++ b/projt/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/LogoDev-job2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="DevJob - Plateforme de recherche d'emploi intelligente avec IA" />
+    <title>DevJob - Recherche d'Emploi Intelligente</title>
   </head>
   <body>
     <div id="root"></div>
